--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   firebase_auth: ^0.18.1+2
   shared_preferences: ^0.5.12+2
   flutter_login: ^1.0.14
-  pdf: ^2.0.0
+  pdf: ^2.1.0 
   horizontal_data_table: ^2.1.1+1
   printing: ^4.0.0
   image: ^2.1.19
@@ -47,6 +47,7 @@ dependencies:
   excel: ^1.1.5
   file_picker: ^1.11.0+3
   share: ^0.6.5+4
+  open_file: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
